Fixed scrolling issue
Flexboxes automatically stretched vertically, shouldnt now

--- a/global.css
+++ b/global.css
@@ -3,6 +3,7 @@ body, html{
     padding: 0;
     overflow-x: hidden;
     background-color: #DDDDDD;
+    
 }
 #sidebar{
     background-color: #09021f;
@@ -33,7 +34,7 @@ body, html{
     display: block;
     position: absolute;
     left: 250px;
-    height: 100%;
+    height: auto;
     margin-top: 0px;
     padding: 0px;
     top: 0;
